feat(Payments): Add embedded payment in sign up form :rocket:

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,6 +22,33 @@
     <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
   </div>
 
+  <%= fields_for(:payment) do |f| %>
+    <div class="col-md-12">
+      <div class="col-md-4 form-group no-left-padding">
+      <%= f.label :card_number, "Card Number", data: {stripe: 'label'} %>
+      <%= f.text_field :card_number, class: "form-control",required:true, data: {stripe: 'number'} %>
+      </div>
+      <div class="form-group col-md-2">
+        <%= f.label :card_cvc, "Card CVC", data: {stripe: 'label'} %>
+        <%= f.text_field :card_cvc, class:"form-control", required: true, data: {stripe: 'cvc'} %>
+      </div>
+      <div class="form-group col-md-6">
+        <div class="col-md-12">
+          <%= f.label :card_expires, "Card Expiry", data: {stripe: "label"} %>
+        </div>
+        <div class="col-md-6">
+          <%= f.select :card_expires_month, options_for_select(Payment.month_options), {include_blank: 'Month'}, "data-stripe"=> "exp-month", class:"form-control", required: true %>
+        </div>
+        <div class="col-md-6">
+          <%= f.select :card_expires_year, options_for_select(Payment.year_options), {include_blank: 'Year'}, "data-stripe"=> "exp-year", class:"form-control", required: true %>
+        </div>
+      </div>
+    </div>
+  
+  <% end %>
+  
+
+
   <div class="form-group">
     <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
   </div>
