--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,5 +66,29 @@
   
   .btn-primary:visited, .btn-danger:visited {
   color: #fff;
+  }
+
+  .jumbotron {
+    text-align: center;
+    background-image: asset-url('../images/bedroom9.jpg');
+    background-size: cover;
+    color: #fff;
+    font-family: 'Helvetica Neue' !important;
+    font-stretch: expanded;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
   
+  }
+  
+  .no-left-padding {
+    padding-left: 0 !important;
+  }
+  
+  .listing {
+    list-style: none;
+    padding-left: 0;
+  }
   
