--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
-
+    <%= javascript_include_tag "https://js.stripe/v2/" %>
     <%= javascript_include_tag "application" %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -60,6 +60,7 @@
         <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
+          
         </div>
       </div><!--/row-->
 
